[project]
name = "pyflake-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dacite~=1.8.1",
    "snowflake-connector-python~=3.12.3",
    "snowflake-snowpark-python~=1.24.0",
]

[tool.black]
line-length = 119
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[dependency-groups]
dev = [
    "pytest-cov>=6.0.0",
    "pytest>=8.3.4",
]

test = ["pytest"]
[tool.pytest.ini_options]
# Add the src directory to the python path, needed for the tests to find the modules
pythonpath = ["./pyflake_client"]
filterwarnings = [
    "ignore:.*urllib3.contrib.pyopenssl.*:DeprecationWarning",
    "ignore::DeprecationWarning:pkg_resources",
    "ignore::DeprecationWarning",
]